<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFC107"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="#FFC107"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/sun" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFC107"
            android:paddingLeft="8dp"
            android:paddingTop="5dp"
            android:paddingRight="8dp"
            android:paddingBottom="5dp"
            android:text="@string/weather_app"
            android:textColor="#70614B"
            android:textSize="28sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/unknown"
            android:textColor="#957D5A"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/pressure"
            app:layout_constraintTop_toBottomOf="@+id/pressure" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/unknown"
            android:textColor="#957D5A"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/humidity"
            app:layout_constraintTop_toBottomOf="@+id/humidity" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/unknown"
            android:textColor="#957D5A"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/temp"
            app:layout_constraintTop_toBottomOf="@+id/temp" />

        <TextView
            android:id="@+id/H_vibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/visibility"
            android:textColor="#957D5A"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/H_pressure"
            app:layout_constraintTop_toBottomOf="@+id/H_pressure" />

        <TextView
            android:id="@+id/H_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="#957D5A"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/unknown"
            android:textColor="#957D5A"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/H_location"
            app:layout_constraintStart_toEndOf="@+id/H_location"
            app:layout_constraintTop_toTopOf="@+id/H_location" />

        <TextView
            android:id="@+id/H_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/temp"
            android:textColor="#957D5A"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/H_location"
            app:layout_constraintTop_toBottomOf="@+id/H_location" />

        <TextView
            android:id="@+id/H_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/humidity"
            android:textColor="#957D5A"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/H_temp"
            app:layout_constraintTop_toBottomOf="@+id/H_temp" />

        <TextView
            android:id="@+id/H_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pressure"
            android:textColor="#957D5A"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/H_humidity"
            app:layout_constraintTop_toBottomOf="@+id/H_humidity" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/unknown"
            android:textColor="#957D5A"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/location"
            app:layout_constraintTop_toBottomOf="@+id/location" />

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="buttonAction"
            android:text="@string/search"
            android:textColor="#70614B"
            android:textStyle="bold"
            app:backgroundTint="#FFC107"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toStartOf="@+id/visibility"
            app:layout_constraintStart_toEndOf="@+id/H_vibility"
            app:layout_constraintTop_toBottomOf="@+id/H_vibility" />

        <EditText
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="6"
            android:gravity="center"
            android:hint="@string/enter_city"
            android:inputType="textShortMessage"
            android:textColor="#957D5A"
            android:textColorHint="#70614B"
            app:layout_constraintEnd_toEndOf="@+id/search"
            app:layout_constraintStart_toStartOf="@+id/search"
            app:layout_constraintTop_toBottomOf="@+id/search"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/enter_a_valid_city"
            android:textColor="#BD190D"
            app:layout_constraintEnd_toEndOf="@+id/city"
            app:layout_constraintStart_toStartOf="@+id/city"
            app:layout_constraintTop_toBottomOf="@+id/city" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>